force-app/main/default/objects/Address__c/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <label>Address Line1</label>
    <type>TextArea</type>
</CustomField>