force-app/main/default/objects/Address__c/fields/Applicant_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email_ID__c</fullName>
    <formula>Applicant__r.Email_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Email ID</label>
    <type>Text</type>
</CustomField>