force-app/main/default/objects/Address__c/fields/Applicant_Pan_Card__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Pan_Card__c</fullName>
    <formula>IF(Applicant__r.Police_Verification__c, Applicant__r.PAN_Card__c, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Pan Card</label>
    <type>Text</type>
</CustomField>