force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Pathankot</fullName>
            </value>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Peshawar</fullName>
            </value>
            <value>
                <fullName>Quetta</fullName>
            </value>
            <value>
                <fullName>Kyoto</fullName>
            </value>
            <value>
                <fullName>Osaka</fullName>
            </value>
            <value>
                <fullName>Sapporo</fullName>
            </value>
            <value>
                <fullName>Hiroshima</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Nagasaki</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Wuhan</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Badoda</fullName>
            </value>
            <value>
                <fullName>Gandhinagar</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Howrah</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Harbin</fullName>
                <isActive>false</isActive>
                <label>Harbin</label>
            </value>
            <value>
                <fullName>Srilanka</fullName>
                <isActive>false</isActive>
                <label>Srilanka</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>