force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Bharat</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
                <isActive>false</isActive>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>India</fullName>
                <isActive>false</isActive>
                <label>India</label>
            </value>
            <value>
                <fullName>Srilanka</fullName>
                <isActive>false</isActive>
                <label>Srilanka</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>