force-app/main/default/objects/Address__c/fields/PinCode__c.field-meta.xml
<CustomField>
    <fullName>PinCode__c</fullName>
    <label>PinCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>