force-app/main/default/objects/Address__c/fields/Plot_Cost__c.field-meta.xml
<CustomField>
    <fullName>Plot_Cost__c</fullName>
    <label>Plot Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>