force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>Sindh</fullName>
            </value>
            <value>
                <fullName>Balochistan</fullName>
            </value>
            <value>
                <fullName>Azad Kashmir</fullName>
            </value>
            <value>
                <fullName>Hokkaido</fullName>
            </value>
            <value>
                <fullName>Chubu</fullName>
            </value>
            <value>
                <fullName>Ehime</fullName>
            </value>
            <value>
                <fullName>Kansal</fullName>
            </value>
            <value>
                <fullName>Provinces Of China</fullName>
            </value>
            <value>
                <fullName>Gujrat</fullName>
            </value>
            <value>
                <fullName>West Bengal</fullName>
            </value>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
            <value>
                <fullName>China State</fullName>
                <isActive>false</isActive>
                <label>China State</label>
            </value>
            <value>
                <fullName>Delhi</fullName>
                <isActive>false</isActive>
                <label>Delhi</label>
            </value>
            <value>
                <fullName>Japan State</fullName>
                <isActive>false</isActive>
                <label>Japan State</label>
            </value>
            <value>
                <fullName>Pakistan State</fullName>
                <isActive>false</isActive>
                <label>Pakistan State</label>
            </value>
            <value>
                <fullName>Telangana</fullName>
                <isActive>false</isActive>
                <label>Telangana</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>